--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,50 @@
 
-<p>
-  <strong>User:</strong>
-  <%= @post.user.name %>
-</p>
+<style>
+#users {
+  background-color : white;
+}
+  #users th {
+    
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #f7f7f7;
+    color: black;
+    border: 1px solid #ddd;
+    padding: 8px;
+} 
+p {
+  text-align: center;
+}
+</style>
+<body>
+<h2 align= "center" >Posts</h2>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<table id = "users" align = "center">
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>Recipes</th>
+      <th>Instruction</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</p>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.user.name %></td>
+        <td><%= post.title %></td>
+        <td><%= post.content %></td>
+        <td><%= link_to 'Show', post %></td>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<br>
+
+<p align = "center"><%= link_to 'New Post', new_post_path %></p>
+</body>
