--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,4 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<h3 align = "center">Welcome</h3>
+<p align = "center"><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+
+
