--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,5 @@
 <% content_for :title do %>About<% end %>
-<h3>About the Website</h3>
-<p>
-This web application was created with
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
+<h3 align = "center">About the What Should I Eat</h3>
+<p align = "center">
+This web application allows users to search for recipes, post recipes and receive recommendation for recipes.
 </p>
