--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,4 +1,19 @@
 <h3 align = "center">Welcome</h3>
 <p align = "center"><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
-
+<!--<div class="container">-->
+<!--  <div class="row">-->
+<!--    <h3>Users</h3>-->
+<!--    <div class="column">-->
+<!--      <table class="table">-->
+<!--        <tbody>-->
+<!--          <% @users.each do |user| %>-->
+<!--            <tr>-->
+<!--              <%= render user %>-->
+<!--            </tr>-->
+<!--          <% end %>-->
+<!--        </tbody>-->
+<!--      </table>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
