--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -3,6 +3,36 @@
 @import "bootstrap";
 
 // make all images responsive by default
+.box {
+  margin: 30px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.8;
+  filter: alpha(opacity=60);
+}
+.centering_box {
+	border-radius: 1em;
+    padding: 1em;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+h1 {
+	font-family: Helvetica;
+	font-size: 250%;
+}
+body {
+		font-family: Arial, Helvetica;
+		width: 100%;
+		height: 400px;
+		background-color: gainsboro;
+		background-image: url("login-page-background.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+
+}
 img {
   @extend .img-responsive;
   margin: 0 auto;
